[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/themes/panel_light_theme.tres" type="StyleBox" id=1]
[ext_resource path="res://source/components/status.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://source/tabs/tab_command.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/main.gd" type="Script" id=5]
[ext_resource path="res://source/components/dialog_profile_name.gd" type="Script" id=6]
[ext_resource path="res://source/components/dialog_file_path.gd" type="Script" id=7]
[ext_resource path="res://source/tabs/tab_stream.tscn" type="PackedScene" id=8]

[sub_resource type="InputEventKey" id=1]
alt = true
pressed = true
scancode = 70

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
alt = true
scancode = 80

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="main" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_menu" type="HBoxContainer" parent="container_content"]
margin_right = 1270.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="file" type="MenuButton" parent="container_content/container_menu"]
margin_right = 44.0
margin_bottom = 26.0
focus_mode = 2
shortcut = SubResource( 2 )
text = "File"
items = [ "Exit", null, 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="profile" type="MenuButton" parent="container_content/container_menu"]
margin_left = 48.0
margin_right = 116.0
margin_bottom = 26.0
custom_constants/hseparation = 2
shortcut = SubResource( 4 )
text = "Profile"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Duplicate", null, 0, false, false, 1, 0, null, "", false, "Rename", null, 0, false, false, 2, 0, null, "", false, "Remove", null, 0, false, false, 3, 0, null, "", false, "Import", null, 0, false, false, 4, 0, null, "", false, "Export", null, 0, false, false, 5, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Default", null, 0, false, false, 7, 0, null, "", false ]

[node name="tabs_content" type="TabContainer" parent="container_content"]
margin_top = 30.0
margin_right = 1270.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Stream" parent="container_content/tabs_content" instance=ExtResource( 8 )]
margin_left = 5.0
margin_top = 33.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Command" parent="container_content/tabs_content" instance=ExtResource( 4 )]
visible = false
margin_left = 5.0
margin_top = 33.0
margin_right = -5.0
margin_bottom = -5.0

[node name="panel_footer" type="PanelContainer" parent="container_content"]
margin_top = 674.0
margin_right = 1270.0
margin_bottom = 710.0
custom_styles/panel = ExtResource( 1 )

[node name="_" type="HBoxContainer" parent="container_content/panel_footer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1265.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 2

[node name="status_ngrok" parent="container_content/panel_footer/_" instance=ExtResource( 2 )]
margin_left = 1000.0
margin_right = 1080.0
margin_bottom = 26.0
text = "ngrok"

[node name="status_overlay" parent="container_content/panel_footer/_" instance=ExtResource( 2 )]
margin_left = 1090.0
margin_right = 1170.0
margin_bottom = 26.0
state = 1
text = "overlay"

[node name="status_plugin" parent="container_content/panel_footer/_" instance=ExtResource( 2 )]
margin_left = 1180.0
margin_right = 1260.0
margin_bottom = 26.0
state = 2
text = "plugin"

[node name="dialog_profile_name" type="ConfirmationDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 35.0
margin_right = -1065.0
margin_bottom = -529.0
popup_exclusive = true
window_title = "Profile name..."
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_name" type="LineEdit" parent="dialog_profile_name"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -97.0
margin_top = 8.0
margin_right = 97.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog_file_path" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 35.0
margin_right = -625.0
margin_bottom = -245.0
rect_min_size = Vector2( 640, 360 )
popup_exclusive = true
script = ExtResource( 7 )
